@@ -654,6 +654,12 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 					RelativePath=".\xbmc\MusicInfoTagLoaderSid.h">
 				</File>
 				<File
+					RelativePath=".\xbmc\MusicInfoTagLoaderWav.cpp">
+				</File>
+				<File
+					RelativePath=".\xbmc\MusicInfoTagLoaderWav.h">
+				</File>
+				<File
 					RelativePath=".\xbmc\MusicInfoTagLoaderWMA.cpp">
 				</File>
 				<File
@@ -2470,6 +2476,12 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 				</File>
 				<File
 					RelativePath=".\xbmc\cores\paplayer\SHNcodec.h">
+				</File>
+				<File
+					RelativePath=".\xbmc\cores\paplayer\WAVcodec.cpp">
+				</File>
+				<File
+					RelativePath=".\xbmc\cores\paplayer\WAVcodec.h">
 				</File>
 			</Filter>
 		</Filter>
