@@ -2701,7 +2701,7 @@ bool CApplication::PlayFile(const CFileItem& item, bool bRestart)
   {
     if (CUtil::FileExists("Q:\\system\\players\\paplayer\\in_mp3.dll"))  strNewPlayer = "paplayer";
   }
-  else if (url.GetFileType() == "ape" || url.GetFileType() == "mac" || url.GetFileType() == "cdda" || url.GetFileType() == "ogg" || url.GetFileType() == "mpc" || url.GetFileType() == "shn" || url.GetFileType() == "flac")
+  else if (url.GetFileType() == "ape" || url.GetFileType() == "mac" || url.GetFileType() == "cdda" || url.GetFileType() == "ogg" || url.GetFileType() == "mpc" || url.GetFileType() == "shn" || url.GetFileType() == "flac" || url.GetFileType() == "wav")
   {
     strNewPlayer = "paplayer";
   }
